crates/wac-parser/tests/resolution/fail/targets-implicit-imports/foo/bar.wat
(component
  (import "a" (func))
  (export "b" (func 0))
)